feat: add runbat